--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FacevalAndroid">
         <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity
             android:name=".SplashActivity"
+            android:label="@string/app_name"
             android:noHistory="true"
-            android:theme="@style/MainTheme.Splash"
-            android:label="@string/app_name">
-<!-- WARNING: NEVER let it work alongside the same one at MainActivity!!! -->
+            android:theme="@style/MainTheme.Splash">
+
+            <!-- WARNING: NEVER let it work alongside the same one at MainActivity!!! -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,16 +33,22 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-<!--
+
+            <!--
 WARNING: DO NEVER UNCOMMENT THE TAG BELOW!!!
          while the same one of the declaration of SplashActivity is working
--->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
 
-<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
