--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.chardon.faceval.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.FacevalAndroid">
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:label="@string/title_activity_settings" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
@@ -22,8 +23,6 @@
             android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@style/MainTheme.Splash">
-
-            <!-- WARNING: NEVER let it work alongside the same one at MainActivity!!! -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,19 +31,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-
-            <!--
-WARNING: DO NEVER UNCOMMENT THE TAG BELOW!!!
-         while the same one of the declaration of SplashActivity is working
-            -->
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
+            android:label="@string/app_name"/>
 
         <meta-data
             android:name="preloaded_fonts"
