--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FacevalAndroid">
-        <activity android:name=".ScoringActivity"></activity>
+        <activity android:name=".ui.login.RegisterActivity"></activity>
+        <activity android:name=".ui.scoring.ScoringActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
