--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FacevalAndroid">
-        <activity android:name=".ui.login.RegisterActivity"></activity>
+        <activity android:name=".ui.login.RegisterActivity" />
         <activity android:name=".ui.scoring.ScoringActivity" />
         <activity
             android:name=".SettingsActivity"
