--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 //    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
-//    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.1'
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     kapt 'androidx.room:room-compiler:2.3.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
