--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FacevalAndroid">
-        <activity android:name=".ui.login.RegisterActivity" />
-        <activity android:name=".ui.scoring.ScoringActivity" />
+        android:theme="@style/Theme.FacevalAndroid"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:label="@string/register"/>
+        <activity
+            android:name=".ui.scoring.ScoringActivity"
+            android:label="@string/scoring_prompt"/>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
+
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
