--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //noinspection GradleDependency
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.1'
 
     testImplementation 'junit:junit:4.13.2'
