--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,13 @@ android {
 }
 
 dependencies {
+    def room_version = '2.3.0'
+    def camerax_version = '1.0.0'
+    def camerax_experimental_version = '1.0.0-alpha25'
+
+    def retrofit_version = '2.9.0'
+    def jackson_version = '2.10.1'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -55,24 +62,32 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.room:room-runtime:2.3.0'
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     implementation 'androidx.preference:preference-ktx:1.1.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_experimental_version"
+    implementation "androidx.camera:camera-extensions:$camerax_experimental_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+//    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     //noinspection GradleDependency
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.1'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
 
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    kapt 'androidx.room:room-compiler:2.3.0'
+    kapt "androidx.room:room-compiler:$room_version"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
 }
