--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+//    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     //noinspection GradleDependency
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
