--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_take_photo"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.FacevalAndroid.Material"
+            android:theme="@style/Theme.FacevalAndroid"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.login.RegisterActivity"
